feat: vantagem getAll
