# sistema/backend/src/main/java/br/edu/pucminas/sistema_moeda_estudantil/model/domain/boundary/VantagemBoundary.java
@@ -2,10 +2,13 @@ package br.edu.pucminas.sistema_moeda_estudantil.model.domain.boundary;
 
 import br.edu.pucminas.sistema_moeda_estudantil.model.domain.dto.VantagemDTO;
 
+import java.util.List;
 import java.util.UUID;
 
 public interface VantagemBoundary {
     void createVantagem(VantagemDTO vantagemDTO);
 
     VantagemDTO getVantagemById(UUID empresaId, UUID vantagemId);
+
+    List<VantagemDTO> listVantagens(UUID empresaId);
 }
